Use List.of and use StandardFileType.PDF instead of null